[build-system]
build-backend = "hatchling.build"

requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "azure-functions-test"
description = "Unit test Azure Functions without the runtime"
readme = "README.md"
keywords = [ "azure", "functions", "mock", "pytest", "serverless", "testing" ]
license = { text = "MIT" }
authors = [ { name = "Sudarshan", email = "your@email.com" } ]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dynamic = [ "version" ]
dependencies = [
  "azure-functions>=1.17",
  "pydantic>=2",
]

optional-dependencies.dev = [
  "bandit>=1.7",
  "pip-audit>=2.7",
  "pre-commit>=3",
  "pyright>=1.1.350",
  "pytest>=8",
  "pytest-cov>=4",
  "ruff>=0.3",
  "twine>=5",
]
optional-dependencies.docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
]

# [project.entry-points.pytest11]
# azure_functions_test = "azure_functions_test.fixtures.pytest_plugin"
urls.Changelog = "https://github.com/sudzxd/azure-functions-test/blob/main/CHANGELOG.md"
urls.Documentation = "https://sudzxd.github.io/azure-functions-test"
urls.Homepage = "https://github.com/sudzxd/azure-functions-test"
urls.Repository = "https://github.com/sudzxd/azure-functions-test"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/azure_functions_test/_version.py"

[tool.hatch.build.targets.wheel]
packages = [ "src/azure_functions_test" ]

# ==============================================================================
# Ruff Configuration (Linting + Formatting)
# ==============================================================================

[tool.ruff]
target-version = "py311"
line-length = 88
src = [ "examples", "src", "tests" ]
exclude = [
  "_version.py", # Auto-generated by hatch-vcs
]

lint.select = [
  "ARG", # flake8-unused-arguments
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "E",   # pycodestyle errors (includes E501 line-too-long)
  "F",   # pyflakes
  "I",   # isort
  "PTH", # flake8-use-pathlib
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "TRY", # tryceratops
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
lint.ignore = [
  "TRY003", # Avoid specifying long messages outside exception class
]

# Enable line length errors (E501) to show in editor
# Note: Ruff will auto-format on save, but will show error before save
lint.per-file-ignores."tests/**/*.py" = [
  "ARG",  # Allow unused arguments in tests
  "S101", # Allow assert in tests
]
# ==============================================================================
# Pyright Configuration (Type Checking)
# ==============================================================================
lint.pycodestyle.max-line-length = 88

[tool.pytest.ini_options]
testpaths = [ "tests" ]
python_files = [ "test_*.py" ]
python_classes = [ "Test*" ]
python_functions = [ "test_*" ]
addopts = [
  "-ra",                        # Show summary of all test outcomes
  "-q",                         # Quiet mode
  "--strict-markers",           # Strict marker usage
  "--strict-config",            # Strict config
  "--cov=azure_functions_test", # Coverage for our package
  "--cov-report=term-missing",  # Show missing lines in terminal
  "--cov-report=html",          # Generate HTML coverage report
  "--cov-report=xml",           # Generate XML for CI
]
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "slow: Slow tests",
]

# ==============================================================================
# Coverage Configuration
# ==============================================================================

[tool.coverage.run]
source = [ "azure_functions_test" ]
branch = true
omit = [
  "*/tests/*",
  "*/_version.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "@overload",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# ==============================================================================
# Bandit Configuration (Security)
# ==============================================================================

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = [ "src", "tests", "examples" ]
exclude = [ "**/__pycache__", "build", "dist", ".venv" ]

# Strict mode settings
reportMissingImports = true
reportMissingTypeStubs = true
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportPrivateUsage = true
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnusedCallResult = false
reportUnknownMemberType = true

# ==============================================================================
# Pytest Configuration
# ==============================================================================

[tool.bandit]
exclude_dirs = [ "tests", ".venv" ]
skips = [ "B101" ]                  # Allow assert in non-test code for type narrowing
